# random_rust_exercises

./: Cargo.toml
exercism/: Cargo.toml
exercism/src/: enum_allergies.rs  enum_robot.rs  enum_sublist.rs  enum_tournament.rs
src/: ch3.rs
the_book/src/: ch3.rs
