[package]
name = "exercism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "enum_sublist"
path = "src/enum_sublist.rs"

[[bin]]
name = "enum_allergies"
path = "src/enum_allergies.rs"

[[bin]]
name = "enum_tournament"
path = "src/enum_tournament.rs"

[[bin]]
name = "enum_robot"
path = "src/enum_robot.rs"